create post/update post/migration

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -49,5 +49,13 @@ nav {
     display:block;
     margin-bottom: 10px;
 }
+.update-user-confirm {
+    float:left;
+}
+.update-user-confirm-photo {
+    float: right;
+}
+
+
 
 
